force-app/main/default/objects/Apttus_Base2__TelemetrySpan__c/Apttus_Base2__TelemetrySpan__c.object-meta.xml
<CustomObject>
    <description>Object used to capture and track the progression of an action for analytics that is initiated by a user.</description>
    <label>Telemetry Span</label>
    <nameField>
        <displayFormat>TS-{00000000}</displayFormat>
        <label>Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Telemetry Spans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>