force-app/main/default/objects/Apttus_Base2__TelemetrySpan__c/fields/Apttus_Base2__CodeFunction__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Base2__CodeFunction__c</fullName>
    <description>Name of the method or function where the operation occurred.</description>
    <inlineHelpText>Name of the method or function where the operation occurred.</inlineHelpText>
    <label>Code Function</label>
    <length>255</length>
    <type>Text</type>
</CustomField>