force-app/main/default/objects/Apttus_Base2__TelemetrySpan__c/fields/Apttus_Base2__CodeLineNumber__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Base2__CodeLineNumber__c</fullName>
    <description>Line number where this record was logged.</description>
    <inlineHelpText>Line number where this record was logged.</inlineHelpText>
    <label>Code Line Number</label>
    <length>64</length>
    <type>Text</type>
</CustomField>