force-app/main/default/objects/Apttus_Base2__TelemetrySpan__c/fields/Apttus_Base2__EndTimestamp__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Base2__EndTimestamp__c</fullName>
    <description>Ending timestamp of the operation being logged.</description>
    <inlineHelpText>Ending timestamp of the operation being logged.</inlineHelpText>
    <label>End Timestamp</label>
    <type>DateTime</type>
</CustomField>