force-app/main/default/objects/Apttus_Base2__TelemetrySpan__c/fields/Apttus_Base2__PackageName__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Base2__PackageName__c</fullName>
    <description>Name of the product or package where this operation occurred.</description>
    <inlineHelpText>Name of the package, resource, or product where this operation occurred.</inlineHelpText>
    <label>Package or Resource Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>