force-app/main/default/objects/Apttus_Base2__TelemetrySpan__c/fields/Apttus_Base2__PackageVersion__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Base2__PackageVersion__c</fullName>
    <description>Version of the package where this operation occurred.</description>
    <inlineHelpText>Version of the package where this operation occurred.</inlineHelpText>
    <label>Package Version</label>
    <length>16</length>
    <type>Text</type>
</CustomField>