force-app/main/default/objects/Apttus_Base2__TelemetrySpan__c/fields/Apttus_Base2__ParentSpanId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Base2__ParentSpanId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The parent of a telemetry span record. A record with this field set to null represents the Root span node.</description>
    <inlineHelpText>The parent of a telemetry span record. A record with this field set to null represents the Root span node.</inlineHelpText>
    <label>Parent Span</label>
    <referenceTo>Apttus_Base2__TelemetrySpan__c</referenceTo>
    <relationshipLabel>Telemetry Spans</relationshipLabel>
    <relationshipName>TelemetrySpans</relationshipName>
    <type>Lookup</type>
</CustomField>