force-app/main/default/objects/Apttus_Base2__TelemetrySpan__c/fields/Apttus_Base2__StartTimestamp__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Base2__StartTimestamp__c</fullName>
    <description>Start timestamp of the operation being logged.</description>
    <inlineHelpText>Start timestamp of the operation being logged.</inlineHelpText>
    <label>Start Timestamp</label>
    <type>DateTime</type>
</CustomField>